http-echo-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-echo-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: hello-k3s.a.uber5.com
    http:
      paths:
      - backend:
          serviceName: http-echo-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hello-k3s.a.uber5.com
    secretName: hello-k3s-tls
